# LoadoutLotteryBot

./: .env  .env.example  .gitignore  EFT.py  PRIVACY-POLICY.md  README.md  TERMS-OF-SERVICE.md  bot.py  eft.py  eft_items.py  lists.py  main.py  pyproject.toml  requirements.txt  ruff.toml  start_bot.bat  start_bot.sh  tll_script.py
config/: config.py
data/gamerules/: ammo.json  bad_modifiers.json  good_modifiers.json  gun_mods.json  maps.json  ok_modifiers.json
data/items/: armor_vests.json  armored_rigs.json  backpacks.json  helmets.json  rigs.json  weapons.json
items/: armors.py  backpacks.py  helmets.py  maps.py  rigs.py  weapons.py
logger/: logger.py
tarkovbot/: __init__.py  bot.py  lists.py  meta_lists.py
userdata/: default.toml
utils/: db.py  eft.py  msgs.py  roll_logic.py  users.py  views.py
